# rsqlite-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LIMITATIONS.md  README.md  test-wasm.mjs
.github/workflows/: ci.yml
crates/rsqlite/: Cargo.toml
crates/rsqlite-core/: Cargo.toml
crates/rsqlite-core/src/: catalog.rs  database.rs  database_tests.rs  datetime.rs  error.rs  eval_helpers.rs  executor.rs  json.rs  lib.rs  plan_expr.rs  planner.rs  types.rs  udf.rs
crates/rsqlite-core/src/database_tests/: basic.rs  constraints_integrity.rs  mod.rs  modern.rs  scalar_extras.rs  schema.rs  views_ctes_advanced.rs
crates/rsqlite-core/src/executor/: aggregate.rs  analyze.rs  autoincrement.rs  constraints.rs  ddl.rs  delete.rs  eval.rs  helpers.rs  insert.rs  mod.rs  pragma.rs  query.rs  scan.rs  sort.rs  state.rs  table_function.rs  trigger.rs  update.rs  vacuum.rs  window.rs
crates/rsqlite-core/src/vtab/: fts5.rs  mod.rs
crates/rsqlite-parser/: Cargo.toml
crates/rsqlite-parser/src/: error.rs  ir.rs  parse.rs
crates/rsqlite-storage/: Cargo.toml
crates/rsqlite-storage/src/: btree.rs  btree_tests.rs  btree_write.rs  codec.rs  error.rs  header.rs  lib.rs  pager.rs  varint.rs
crates/rsqlite-vfs/: Cargo.toml
crates/rsqlite-vfs/src/: error.rs  lib.rs  memory.rs  multiplex.rs  native.rs
crates/rsqlite-wasm/: Cargo.toml  webdriver.json
crates/rsqlite-wasm/src/: idb.rs  lib.rs  opfs.rs
crates/rsqlite-wasm/tests/: wasm_browser.rs  wasm_database.rs
crates/rsqlite/src/: lib.rs
demo/: index.html  serve.sh
js/: .npmignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/scripts/: patch-wasm-node.mjs
js/src/: index.ts  types.ts  worker-proxy.ts  worker.ts
js/test/: database.test.ts  wasm-loader.ts
scripts/: coverage.sh
