[workspace]
resolver = "2"
members = [
    "crates/rsqlite-parser",
    "crates/rsqlite-vfs",
    "crates/rsqlite-storage",
    "crates/rsqlite-core",
    "crates/rsqlite-wasm",
    "crates/rsqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/Brainwires/rsqlite-wasm"
homepage = "https://github.com/Brainwires/rsqlite-wasm"
authors = ["The rsqlite-wasm contributors"]
keywords = ["sqlite", "wasm", "database", "sql", "browser"]
categories = ["database", "wasm", "no-std"]

[workspace.dependencies]
# `version` is required alongside `path` for `cargo publish` to accept
# the manifest; the path entry wins for local workspace builds, the
# version resolves on crates.io for downstream consumers.
#
# `rsqlite-vfs` is published as `rsqlite-wasm-vfs` (the bare name is
# taken on crates.io); the `package = "..."` alias lets consumers'
# `rsqlite-vfs = { workspace = true }` keep working unchanged.
rsqlite-parser  = { path = "crates/rsqlite-parser",  version = "0.1" }
rsqlite-vfs     = { path = "crates/rsqlite-vfs",     version = "0.1", package = "rsqlite-wasm-vfs", default-features = false }
rsqlite-storage = { path = "crates/rsqlite-storage", version = "0.1" }
rsqlite-core    = { path = "crates/rsqlite-core",    version = "0.1" }

sqlparser = { version = "0.55", features = ["visitor"] }
thiserror = "2"
log = "0.4"
lru = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
