[package]
name = "rsqlite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Query planner, execution engine, and transaction manager for rsqlite-wasm"

[dependencies]
rsqlite-parser = { workspace = true }
rsqlite-storage = { workspace = true }
rsqlite-vfs = { workspace = true, features = ["native"] }
thiserror = { workspace = true }
