[package]
name = "rsqlite-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "B-tree storage engine and SQLite file format codec for rsqlite-wasm"

[dependencies]
rsqlite-vfs = { workspace = true, features = ["native"] }
thiserror = { workspace = true }
lru = { workspace = true }
