[package]
name = "rsqlite-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Virtual file system trait and backends for rsqlite-wasm"

[features]
default = ["native"]
native = []

[dependencies]
thiserror = { workspace = true }
