[package]
name = "rsqlite-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Virtual file system trait and backends for rsqlite-wasm"

[features]
default = ["native"]
native = []

[dependencies]
thiserror = { workspace = true }
