[package]
# Published as `rsqlite-wasm-vfs` because `rsqlite-vfs` is already
# taken on crates.io by an unrelated VFS-helper crate. The Rust
# library name stays `rsqlite_vfs` (see [lib] below) so in-source
# `use rsqlite_vfs::*` keeps working unchanged.
name = "rsqlite-wasm-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Virtual file system trait and backends for rsqlite-wasm"

[lib]
name = "rsqlite_vfs"

[features]
default = ["native"]
native = []

[dependencies]
thiserror = { workspace = true }
