[package]
name = "rsqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure Rust SQLite-compatible database engine"

[dependencies]
rsqlite-core = { workspace = true }
rsqlite-vfs = { workspace = true, features = ["native"] }
rsqlite-storage = { workspace = true }
rsqlite-parser = { workspace = true }
